Aepps: Fix last row align, closes #39

--- a/src/pages/Apps/Apps.scss
+++ b/src/pages/Apps/Apps.scss
@@ -10,13 +10,14 @@
   }
 
   .shortcuts {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(110px, 1fr));
+    padding: 20px;
+    grid-gap: 20px;
+    justify-items: center;
 
     .app-shortcut {
       position: relative;
-      margin: 30px 20px 20px 20px;
 
       @mixin remove-app-btn-hidden {
         visibility: hidden;
